# tinyfiledialogs

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  hello.c
include/TFD/: tinyfd_moredialogs.h  tinyfiledialogs.h
src/: tinyfd_moredialogs.c  tinyfiledialogs.c
